# src/api/handlers/cities.go
@@ -1,0 +1,170 @@
+package handlers
+
+import (
+	"net/http"
+	"strconv"
+
+	"github.com/amirhasanpour/car-sale-management-wep-api/src/api/dto"
+	"github.com/amirhasanpour/car-sale-management-wep-api/src/api/helper"
+	"github.com/amirhasanpour/car-sale-management-wep-api/src/config"
+	"github.com/amirhasanpour/car-sale-management-wep-api/src/services"
+	"github.com/gin-gonic/gin"
+)
+
+type CityHandler struct {
+	service *services.CityService
+}
+
+func NewCityHandler(cfg *config.Config) *CityHandler {
+	return &CityHandler{
+		service: services.NewCityService(cfg),
+	}
+}
+
+// CreateCity godoc
+// @Summary Create a City
+// @Description Create a City
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param Request body dto.CreateCityRequest true "Create a City"
+// @Success 201 {object} helper.BaseHttpResponse{result=dto.CityResponse} "City response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Router /v1/cities/ [post]
+// @Security AuthBearer
+func (h *CityHandler) Create(c *gin.Context) {
+	req := dto.CreateCityRequest{}
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, 121, err))
+		return
+	}
+
+	res, err := h.service.Create(c, &req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(res, true, 0))
+}
+
+// UpdateCity godoc
+// @Summary Update a City
+// @Description Update a City
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param id path int true "Id"
+// @Param Request body dto.UpdateCityRequest true "Update a City"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.CityResponse} "City response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Failure 404 {object} helper.BaseHttpResponse "Not found"
+// @Router /v1/cities/{id} [put]
+// @Security AuthBearer
+func (h *CityHandler) Update(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Params.ByName("id"))
+	req := dto.UpdateCityRequest{}
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, 121, err))
+		return
+	}
+
+	res, err := h.service.Update(c, id, &req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusOK, helper.GenerateBaseResponse(res, true, 0))
+}
+
+// DeleteCity godoc
+// @Summary Delete a City
+// @Description Delete a City
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param id path int true "Id"
+// @Success 200 {object} helper.BaseHttpResponse "response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Failure 404 {object} helper.BaseHttpResponse "Not found"
+// @Router /v1/cities/{id} [delete]
+// @Security AuthBearer
+func (h *CityHandler) Delete(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Params.ByName("id"))
+	if id == 0 {
+		c.AbortWithStatusJSON(http.StatusNotFound,
+			helper.GenerateBaseResponse(nil, false, 121))
+		return
+	}
+
+	err := h.service.Delete(c, id)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusOK, helper.GenerateBaseResponse(nil, true, 0))
+}
+
+// GetCity godoc
+// @Summary Get a City
+// @Description Get a City
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param id path int true "Id"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.CityResponse} "City response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Failure 404 {object} helper.BaseHttpResponse "Not found"
+// @Router /v1/cities/{id} [get]
+// @Security AuthBearer
+func (h *CityHandler) GetById(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Params.ByName("id"))
+	if id == 0 {
+		c.AbortWithStatusJSON(http.StatusNotFound,
+			helper.GenerateBaseResponse(nil, false, 121))
+		return
+	}
+
+	res, err := h.service.GetById(c, id)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusOK, helper.GenerateBaseResponse(res, true, 0))
+}
+
+// GetCities godoc
+// @Summary Get Cities
+// @Description Get Cities
+// @Tags Cities
+// @Accept json
+// @produces json
+// @Param Request body dto.PaginationInputWithFilter true "Request"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.PagedList[dto.CityResponse]} "City response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Router /v1/cities/get-by-filter [post]
+// @Security AuthBearer
+func (h *CityHandler) GetByFilter(c *gin.Context) {
+	req := dto.PaginationInputWithFilter{}
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, 121, err))
+		return
+	}
+
+	res, err := h.service.GetByFilter(c, &req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, 121, err))
+		return
+	}
+	c.JSON(http.StatusOK, helper.GenerateBaseResponse(res, true, 0))
+}
